@@ -304,6 +304,22 @@ class AnalysisBase(object):
             Turn on verbosity
 
 
+    Example
+    -------
+       import MDAnalysis as mda
+       from MDAnalysisTests.datafiles import TPR, XTC
+       from MDAnalysis.analysis import rms
+       
+       u = mda.Universe(TPR, XTC)
+
+       rmsd = rms.RMSD(u, select='name CA')
+       # A list of frames to run the analysis on can be passed
+       rmsd.run(frames=[0,2,3,6,9])
+       # A list of booleans the same length of the trajectory can also be used
+       rmsd.run(frames=[True, False, True, True, False, False, True, False,
+                        False, True])
+
+        
         .. versionchanged:: 2.1.0
             Added ability to iterate through trajectory by passing a list of
             frame indices
@@ -325,6 +341,8 @@ class AnalysisBase(object):
             self.frames[i] = ts.frame
             self.times[i] = ts.time
             self._single_frame()
+        # rewind added for behavioral consistency, Issue #3416
+        self._trajectory.rewind() 
         logger.info("Finishing up")
         self._conclude()
         return self
